# ATS-Eureka

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  auth.py  config.py  db.py  docker-compose.yml  environment.yml  helpers.py  heroku.yml  models.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx  index.css
client/src/components/: ApplicationCard.jsx  ApplicationModal.jsx  DashboardLayout.jsx  EmployerDroppableColumn.jsx  EmployerKanbanCard.jsx  EmployerLayout.jsx  Footer.jsx  InterviewKitModal.jsx  Navbar.jsx  ProtectedRoute.jsx  ResumeCard.jsx  ThemeToggle.jsx
client/src/lib/: api.js
client/src/pages/: ApplicationTracker.jsx  AtsAnalysis.jsx  EmployeeDashboard.jsx  EmployeeHome.jsx  EmployeeProfile.jsx  (+13 more)
frontend/: employee_home.html  employee_home.js  employer_home.html  employer_home.js  index.html  plans.html  script.js  signin.html  signin.js  signup.html  signup.js
market_data_analysis_scripts/: globalcv.py  globalcv2.py  influence.py  marketdata.py  marketgrow.py  marketshare.py  scatter.py  swot.py
services/: __init__.py  analytics_service.py  application_service.py  dashboard_service.py  employer_analysis_service.py  export_service.py  hr_dashboard_service.py  interview_service.py  jd_service.py  prompt_builder.py  ranking_service.py  resume_service.py  s3_storage_service.py  storage_service.py  summary_service.py  tailoring_service.py
static/: script.js
templates/: employee.html  employer.html  index.html
